Styling of the contact section and fixing spaces on small devices.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ body {
 }
 
 .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl {
-    padding-right: 0px;
+    /* padding-right: 0px; */
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
@@ -270,6 +270,11 @@ ul.list-inline li i {
 
 /* -----------------------------------------  /Offers Section ----------------------------------------- */
 /* -----------------------------------------  Contact Section ----------------------------------------- */
+
+.contact-container {
+
+}
+
 .contact-form-send {
     color: #fff;
     background: #167709;
@@ -289,10 +294,21 @@ ul.list-inline li i {
 }
 
 .paragraph-contact-background {
-position: absolute;
-  bottom: 10px;
-  right: 13px;
+    position: absolute;
+    bottom: 10px;
+    right: 13px;
 }
+
+.form-check-input {
+        color:#167709;
+    }
+
+    .form-control:focus {
+    border-color: #167709;
+    -webkit-box-shadow: 0 0 0 0.1rem rgba(22, 119, 9, .25);
+    box-shadow: 0 0 0 0.2rem rgba(22, 119, 9, .25);
+    }
+
 
 /* -----------------------------------------  /Contact Section ----------------------------------------- */
 /* -----------------------------------------  Media Queries ----------------------------------------- */
@@ -303,6 +319,12 @@ position: absolute;
     #student-nhs-discount-image {
         margin-top: 8px;
     }
+
+    /* Contact */
+    .form-control{
+        margin-top: 12px;
+    }
+
 }
 
 /* -----------------------------------------  /Media Queries ----------------------------------------- */
